added spell info button. Grid layout for spells

--- a/index.html
+++ b/index.html
@@ -118,6 +118,16 @@
     </div>
     <div class="spell-container card" id="spell-container">
     </div>
+    <div class="overlay" id="popup-overlay"></div>
+    <div class="popup-container card" id="popup-container">
+      <h2 id="popup-heading"></h2>
+      <p id="popup-desc"></p>
+      <p id="popup-desc2"></p>
+      <p id="popup-range"></p>
+      <p id="popup-cast-time"></p>
+      <p id="popup-duration"></p>
+      <button id="close-button">x</button>
+    </div>
   </main>
   <script src="/main.js" type="module"></script>
 </body>
