--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     </nav>
   </header>
   <main>
-    <div class="character-container card">
+    <section class="character-container card">
       <label for="character-name">Character Name:</label>
       <input type="text" name="character-name" id="character-name" />
-      <button id="random-name"><i class="fa-solid fa-dice-d20"></i></button>
+      <button id="random-name" class="random-button"><i class="fa-solid fa-dice-d20"></i></button>
       <div class="level">
         <label for="level">Level:</label>
-        <input type="number" name="level" id="level" min="1" max="20" value="1" />
+        <input type="number" name="level" id="level" class="hide-up-down" min="1" max="20" value="1"/>
       </div>
-    </div>
-    <div class="stat-container card">
-      <h3 id="stat-points">Points:</h3>
+    </section>
+    <section class="stat-container card">
+      <button id="random-stats" class="random-button"><i class="fa-solid fa-dice-d20"></i></button>
       <div class="stat-card">
         <div class="stat">
           <label for="strength">Strength</label>
@@ -56,8 +56,8 @@
           <input type="number" name="charisma" id="charisma" min="1" max="20" value="1" />
         </div>
       </div>
-    </div>
-    <div class="dice-roller-container card">
+    </section>
+    <section class="dice-roller-container card">
       <label for="dice-roller">Roll</label>
       <input type="number" name="dice-roller" id="dice-quantity" min="1" value="1" />
       <label for="dice-select">x</label>
@@ -76,8 +76,8 @@
       <button id="roll-dice">Roll</button>
       <div id="dice-result"></div>
       <button id="clear-rolls">Clear</button>
-    </div>
-    <div class="race-container card">
+    </section>
+    <section class="race-container card">
       <div>
         <label for="race">Race</label>
         <select name="race" id="race-selection">
@@ -94,8 +94,14 @@
         </select>
       </div>
       <p id="race-description">Select a race</p>
-    </div>
-    <div class="class-container card">
+      <div id="language-container">
+        <ol id="languages-list">
+
+        </ol>
+        <p id="language-description"></p>
+      </div>
+    </section>
+    <section class="class-container card">
       <div class="class">
         <label for="class">Class</label>
         <select name="class" id="class-selection">
@@ -115,19 +121,18 @@
         </select>
       </div>
       <p id="class-description">Select a race</p>
-    </div>
-    <div class="spell-container card" id="spell-container">
-    </div>
+    </section>
+    <section class="spell-container card" id="spell-container">
+    </section>
     <div class="overlay" id="popup-overlay"></div>
-    <div class="popup-container card" id="popup-container">
+    <section class="popup-container card" id="popup-container">
       <h2 id="popup-heading"></h2>
-      <p id="popup-desc"></p>
-      <p id="popup-desc2"></p>
+      <div id="popup-desc"></div>
       <p id="popup-range"></p>
       <p id="popup-cast-time"></p>
       <p id="popup-duration"></p>
       <button id="close-button">x</button>
-    </div>
+    </section>
   </main>
   <script src="/main.js" type="module"></script>
 </body>
