added equipment section, save button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <button id="random-name" class="random-button"><i class="fa-solid fa-dice-d20"></i></button>
       <div class="level">
         <label for="level">Level:</label>
-        <input type="number" name="level" id="level" class="hide-up-down" min="1" max="20" value="1"/>
+        <input type="number" name="level" id="level" class="hide-up-down" min="1" max="20" value="1" />
       </div>
     </section>
     <section class="stat-container card">
@@ -81,16 +81,16 @@
       <div>
         <label for="race">Race</label>
         <select name="race" id="race-selection">
-        <option value="">-</option>
-        <option value="dragonborn">Dragonborn</option>
-        <option value="dwarf">Dwarf</option>
-        <option value="elf">Elf</option>
-        <option value="gnome">Gnome</option>
-        <option value="half-elf">Half-Elf</option>
-        <option value="half-orc">Half-Orc</option>
-        <option value="halfling">Halfling</option>
-        <option value="human">Human</option>
-        <option value="tiefling">Tiefling</option>
+          <option value="">-</option>
+          <option value="dragonborn">Dragonborn</option>
+          <option value="dwarf">Dwarf</option>
+          <option value="elf">Elf</option>
+          <option value="gnome">Gnome</option>
+          <option value="half-elf">Half-Elf</option>
+          <option value="half-orc">Half-Orc</option>
+          <option value="halfling">Halfling</option>
+          <option value="human">Human</option>
+          <option value="tiefling">Tiefling</option>
         </select>
       </div>
       <p id="race-description">Select a race</p>
@@ -105,22 +105,24 @@
       <div class="class">
         <label for="class">Class</label>
         <select name="class" id="class-selection">
-        <option value="">-</option>
-        <option value="barbarian">Barbarian</option>
-        <option value="bard">Bard</option>
-        <option value="cleric">Cleric</option>
-        <option value="druid">Druid</option>
-        <option value="fighter">Fighter</option>
-        <option value="monk">Monk</option>
-        <option value="paladin">Paladin</option>
-        <option value="ranger">Ranger</option>
-        <option value="rogue">Rogue</option>
-        <option value="sorcerer">Sorcerer</option>
-        <option value="warlock">Warlock</option>
-        <option value="wizard">Wizard</option>
+          <option value="">-</option>
+          <option value="barbarian">Barbarian</option>
+          <option value="bard">Bard</option>
+          <option value="cleric">Cleric</option>
+          <option value="druid">Druid</option>
+          <option value="fighter">Fighter</option>
+          <option value="monk">Monk</option>
+          <option value="paladin">Paladin</option>
+          <option value="ranger">Ranger</option>
+          <option value="rogue">Rogue</option>
+          <option value="sorcerer">Sorcerer</option>
+          <option value="warlock">Warlock</option>
+          <option value="wizard">Wizard</option>
         </select>
       </div>
       <p id="class-description">Select a race</p>
+    </section>
+    <section class="equipment-container card">
     </section>
     <section class="spell-container card" id="spell-container">
     </section>
@@ -132,6 +134,9 @@
       <p id="popup-cast-time"></p>
       <p id="popup-duration"></p>
       <button id="close-button">x</button>
+    </section>
+    <section class="save-container card">
+      <button id="save-button">SAVE</button>
     </section>
   </main>
   <script src="/main.js" type="module"></script>
