about page outline, load and save characters

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 <body>
   <header>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Randomizer</a>
-      <a href="#">My Characters</a>
-      <a href="#">About</a>
+      <a href="/index.html">Home</a>
+      <a href="/characters.html">My Characters</a>
+      <a href="/about.html">About</a>
     </nav>
   </header>
   <main>
@@ -137,6 +136,7 @@
     </section>
     <section class="save-container card">
       <button id="save-button">SAVE</button>
+      <p id="save-message"></p>
     </section>
   </main>
   <script src="/main.js" type="module"></script>
