--- a/index.html
+++ b/index.html
@@ -19,16 +19,40 @@
   </header>
   <main>
     <section class="character-container card">
-      <label for="character-name">Character Name:</label>
-      <input type="text" name="character-name" id="character-name" />
-      <button id="random-name" class="random-button"><i class="fa-solid fa-dice-d20"></i></button>
-      <div class="character-container">
-        <label for="level">Level:</label>
-        <input type="number" name="level" id="level" class="hide-up-down" min="1" max="20" value="1" />
+      <div class="sub-character-info">
+        <label for="character-name">Character Name:</label>
+        <input type="text" name="character-name" id="character-name" />
+        <button id="random-name" class="random-button"><i class="fa-solid fa-dice-d20"></i></button>
+        <div class="sub">
+          <label for="level">Level:</label>
+          <input type="number" name="level" id="level" class="hide-up-down" min="1" max="20" value="1" />
+        </div>
+        <div class="sub">
+          <label for="health">Health:</label>
+          <input type="number" name="health" id="health" class="hide-up-down" value="1">
+        </div>
       </div>
-      <div class="character-container">
-        <label for="health">Health:</label>
-        <input type="number" name="health" id="health" class="hide-up-down" min="1" value="1" />
+      <div class="sub-character-info">
+        <div class="sub-character-container">
+          <label for="armor-class">Armor Class:</label>
+          <p id="armorClass">10</p>
+        </div>
+        <div class="sub-character-container">
+          <label for="speed">Speed:</label>
+          <p id="speed">0</p>
+        </div>
+        <div class="sub-character-container">
+          <label for="initiative">Initiative:</label>
+          <p id="initiative">0</p>
+        </div>
+        <div class="sub-character-container">
+          <label for="proficiency">Proficiency:</label>
+          <p id="proficiency">+2</p>
+        </div>
+        <div class="sub-character-container">
+          <label for="hit-die:">Hit Die:</label>
+          <p id="hit-die">0</p>
+        </div>
       </div>
     </section>
     <section class="stat-container card">
@@ -36,37 +60,39 @@
       <div class="stat-card">
         <div class="stat">
           <label for="strength">Strength</label>
-          <input type="number" name="strength" id="strength" min="1" max="20" value="1" />
-          <p id="strength-modifier">-5</p>
+          <input type="number" name="strength" id="strength" min="1" max="20" value="10" />
+          <p id="strength-modifier">+0</p>
         </div>
         <div class="stat">
           <label for="dexterity">Dexterity</label>
-          <input type="number" name="dexterity" id="dexterity" min="1" max="20" value="1" />
-          <p id="dexterity-modifier">-5</p>
+          <input type="number" name="dexterity" id="dexterity" min="1" max="20" value="10" />
+          <p id="dexterity-modifier">+0</p>
         </div>
         <div class="stat">
           <label for="constitution">Constitution</label>
-          <input type="number" name="constitution" id="constitution" min="1" max="20" value="1" />
-          <p id="constitution-modifier">-5</p>
+          <input type="number" name="constitution" id="constitution" min="1" max="20" value="10" />
+          <p id="constitution-modifier">+0</p>
         </div>
         <div class="stat">
           <label for="intelligence">Intelligence</label>
-          <input type="number" name="intelligence" id="intelligence" min="1" max="20" value="1" />
-          <p id="intelligence-modifier">-5</p>
+          <input type="number" name="intelligence" id="intelligence" min="1" max="20" value="10" />
+          <p id="intelligence-modifier">+0</p>
         </div>
         <div class="stat">
           <label for="wisdom">Wisdom</label>
-          <input type="number" name="wisdom" id="wisdom" min="1" max="20" value="1" />
-          <p id="wisdom-modifier">-5</p>
+          <input type="number" name="wisdom" id="wisdom" min="1" max="20" value="10" />
+          <p id="wisdom-modifier">+0</p>
         </div>
         <div class="stat">
           <label for="charisma">Charisma</label>
-          <input type="number" name="charisma" id="charisma" min="1" max="20" value="1" />
-          <p id="charisma-modifier">-5</p>
+          <input type="number" name="charisma" id="charisma" min="1" max="20" value="10" />
+          <p id="charisma-modifier">+0</p>
         </div>
       </div>
     </section>
-    <section class="dice-roller-container card">
+    <input type="checkbox" id="menu-checkbox">
+    <label for="menu-checkbox" class="menu-toggle"><i class="fa-solid fa-dice"></i></label>
+    <section class="dice-roller-container side-menu card">
       <label for="dice-roller">Roll</label>
       <input type="number" name="dice-roller" id="dice-quantity" min="1" value="1" />
       <label for="dice-select">x</label>
@@ -136,92 +162,74 @@
     <section class="skills-container card">
       <div class="skill">
         <label for="acrobatics">Acrobatics</label>
-        <input type="checkbox" name="acrobatics" id="acrobatics" />
-        <p id="acrobatics-total"></p>
+        <p id="acrobatics-total">0</p>
       </div>
       <div class="skill">
-        <label for="animal-handling">Animal Handling</label>
-        <input type="checkbox" name="animal-handling" id="animal-handling" />
-        <p id="animal-handling-total"></p>
+        <label for="animal-handling-total">Animal Handling</label>
+        <p id="animal-handling-total">0</p>
       </div>
       <div class="skill">
         <label for="arcana">Arcana</label>
-        <input type="checkbox" name="arcana" id="arcana" />
         <p id="arcana-total">0</p>
       </div>
       <div class="skill">
         <label for="athletics">Athletics</label>
-        <input type="checkbox" name="athletics" id="athletics" />
         <p id="athletics-total">0</p>
       </div>
       <div class="skill">
         <label for="deception">Deception</label>
-        <input type="checkbox" name="deception" id="deception" />
         <p id="deception-total">0</p>
       </div>
       <div class="skill">
         <label for="history">History</label>
-        <input type="checkbox" name="history" id="history" />
         <p id="history-total">0</p>
       </div>
       <div class="skill">
         <label for="insight">Insight</label>
-        <input type="checkbox" name="insight" id="insight" />
         <p id="insight-total">0</p>
       </div>
       <div class="skill">
         <label for="intimidation">Intimidation</label>
-        <input type="checkbox" name="intimidation" id="intimidation" />
         <p id="intimidation-total">0</p>
       </div>
       <div class="skill">
         <label for="investigation">Investigation</label>
-        <input type="checkbox" name="investigation" id="investigation" />
         <p id="investigation-total">0</p>
       </div>
       <div class="skill">
         <label for="medicine">Medicine</label>
-        <input type="checkbox" name="medicine" id="medicine" />
         <p id="medicine-total">0</p>
       </div>
       <div class="skill">
         <label for="nature">Nature</label>
-        <input type="checkbox" name="nature" id="nature" />
         <p id="nature-total">0</p>
       </div>
       <div class="skill">
         <label for="perception">Perception</label>
-        <input type="checkbox" name="perception" id="perception" />
         <p id="perception-total">0</p>
       </div>
       <div class="skill">
         <label for="performance">Performance</label>
-        <input type="checkbox" name="performance" id="performance" />
         <p id="performance-total">0</p>
       </div>
       <div class="skill">
         <label for="persuasion">Persuasion</label>
-        <input type="checkbox" name="persuasion" id="persuasion" />
         <p id="persuasion-total">0</p>
       </div>
       <div class="skill">
         <label for="religion">Religion</label>
-        <input type="checkbox" name="religion" id="religion" />
         <p id="religion-total">0</p>
       </div>
       <div class="skill">
         <label for="sleight-of-hand">Sleight of Hand</label>
-        <input type="checkbox" name="sleight-of-hand" id="sleight-of-hand" />
         <p id="sleight-of-hand-total">0</p>
       </div>
       <div class="skill">
         <label for="stealth">Stealth</label>
-        <input type="checkbox" name="stealth" id="stealth" />
         <p id="stealth-total">0</p>
       </div>
       <div class="skill">
         <label for="survival">Survival</label>
-        <input type="checkbox" name="survival" id="survival" />
         <p id="survival-total">0</p>
       </div>
     </section>
@@ -231,9 +239,9 @@
     <section class="popup-container card" id="popup-container">
       <h2 id="popup-heading"></h2>
       <div id="popup-desc"></div>
-      <p id="popup-range"></p>
-      <p id="popup-cast-time"></p>
-      <p id="popup-duration"></p>
+      <p id="popup-p1"></p>
+      <p id="popup-p2"></p>
+      <p id="popup-p3"></p>
       <button id="close-button">x</button>
     </section>
     <section class="save-container card">
