--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/Styles/charAbout.css" />
     <script src="https://kit.fontawesome.com/861319270c.js" crossorigin="anonymous"></script>
     <title>About</title>
 </head>
@@ -18,9 +18,22 @@
         </nav>
     </header>
 </body>
+<main>
     <h1>About RPG Character Creator</h1>
-    <p>This is a simple character creator for Dungeons and Dragons 5th Edition. It was Created by Jo Stephenson for the Mimo Bootcamp Unit 4 Project</p>
-    <p>It uses HTML, CSS and JavaScript to create a simple character creator that allows you to create a character and save it to local storage.</p>
-    <p>It uses the <a href="https://www.dnd5eapi.co/" target="_blank">D&D 5th Edition API</a> to pull class, race, spell and equipment information for your character</p>
-    <p>It also uses <a href="https://chartopia.d12dev.com/api/schema/swagger/" target="_blank">The Chartopia API</a> to generate random names</p>
+    <div class="about-container">
+        <p>This is a simple character creator for Dungeons and Dragons 5th Edition. It was Created by Jo Stephenson for
+            the
+            Mimo Bootcamp Unit 4 Project</p>
+        <p>It uses HTML, CSS and JavaScript to create a simple character creator that allows you to create a character
+            and
+            save it to local storage.</p>
+        <p>It uses the <a href="https://www.dnd5eapi.co/" target="_blank">D&D 5th Edition API</a> to pull class, race,
+            spell
+            and equipment information for your character</p>
+        <p>It also uses <a href="https://chartopia.d12dev.com/api/schema/swagger/" target="_blank">The Chartopia API</a>
+            to
+            generate random names</p>
+    </div>
+</main>
+
 </html>
