--- a/index.html
+++ b/index.html
@@ -20,21 +20,23 @@
   <main>
     <section class="character-container card">
       <div class="sub-character-info">
-        <label for="character-name">Character Name:</label>
-        <input type="text" name="character-name" id="character-name" />
-        <button id="random-name" class="random-button"><i class="fa-solid fa-dice-d20"></i></button>
-        <div class="sub">
+        <div class="sub-name">
+          <label for="character-name">Character Name:</label>
+          <input type="text" name="character-name" id="character-name" placeholder="Name..."/>
+          <button id="random-name" class="random-button"><i class="fa-solid fa-dice-d20"></i></button>
+        </div>
+        <div class="sub-level">
           <label for="level">Level:</label>
           <input type="number" name="level" id="level" class="hide-up-down" min="1" max="20" value="1" />
         </div>
-        <div class="sub">
+        <div class="sub-health">
           <label for="health">Health:</label>
           <input type="number" name="health" id="health" class="hide-up-down" value="1">
         </div>
       </div>
-      <div class="sub-character-info">
+      <div class="sub-character-stats">
         <div class="sub-character-container">
-          <label for="armor-class">Armor Class:</label>
+          <label for="armor-class">AC:</label>
           <p id="armorClass">10</p>
         </div>
         <div class="sub-character-container">
@@ -155,9 +157,10 @@
           <option value="wizard">Wizard</option>
         </select>
       </div>
-      <p id="class-description">Select a race</p>
+      <p id="class-description">Select a class</p>
     </section>
     <section class="equipment-container card">
+      <h1>Select a class to pick your equipment</h1>
     </section>
     <section class="skills-container card">
       <div class="skill">
@@ -234,6 +237,7 @@
       </div>
     </section>
     <section class="spell-container card" id="spell-container">
+      <h1>Select a class to pick your spells</h1>
     </section>
     <div class="overlay" id="popup-overlay"></div>
     <section class="popup-container card" id="popup-container">
